--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.0.1",
     "react-hook-form": "^7.0.0",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
